# Rubiks_Cube_Solver

./: 1drepresentation.cpp  CMakeLists.txt  Generic_Rubiks_Cube.cpp  Generic_Rubiks_Cube.h  main.cpp  rubikscube1D.cpp
Representations/: Generic_Rubiks_Cube.h  rubikscube1D.cpp  rubikscube3D.cpp
Solvers/: BFSSolver.h  DFSSolver.cpp  DFSSolver.h
